Added Lily object.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src="https://raw.githubusercontent.com/wvffle/waff-query.js/master/waff-query.js"></script>
     </head>
     <body>
-        <textarea id="lily-editor" title="Lily Editor"></textarea>
+        <textarea class="lily-editor" title="Lily Editor"></textarea>
         <script src="src/lily.js"></script>
     </body>
 </html>
