Added textarea in background and reorganised styles.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <title>Lily the Panda IDE</title>
+        <meta charset="UTF-8">
+        <title>Lily.js</title>
         <link rel="stylesheet" type="text/css" href="src/lily.css">
         <link rel="stylesheet" type="text/css" href="themes/material-lily.css">
         <script src="https://raw.githubusercontent.com/wvffle/waff-query.js/master/waff-query.js"></script>
