Fixes and code cleanup.

--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
 <section id="wrapper">
     <header>
         <h1>Lily.js</h1>
-        <p>Lily.js is a client side syntax highlighter dedicated to the <a
-                href="https://github.com/Panda-Programming-Language/Lily">Lily IDE</a></p>
+        <p>Lily.js is a client side syntax highlighter dedicated to the <a href="https://github.com/Panda-Programming-Language/Lily">Lily IDE</a></p>
     </header>
     <article>
         <textarea class="lily-editor" title="Lily Editor"></textarea>
